language/move-lang/tests/move_check/expansion/no_address.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/no_address.move:1:8
  │
1 │ module M {}
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

